# This is the 1st commit message:
new changes README.md

# This is the commit message #2:

Update README.md

Update labinternal.py.ipynb

Update

Update README.md

Update README.md

new changes

Update README.md

# This is the commit message #3:

Update README.md

Update labinternal.py.ipynb

Update

Update README.md

new changes

new changes

--- a/labinternal.py.ipynb
+++ b/labinternal.py.ipynb
@@ -1100,8 +1100,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "df=pd.read_csv('/home/msois/Downloads/Rainfall/southern.csv')\n",
-    "df"
+    "df=pd.read_csv('/home/msois/Downloads/Rainfall/southern.csv')\n"
    ]
   },
   {
@@ -1847,7 +1846,6 @@
    "source": [
     "#df[\"dry\"]=df['Actual Rainfall: JUN']-df['Actual Rainfall: JUL']-df['Actual Rainfall: AUG']-df['Actual Rainfall: SEPT']\n",
     "#df[df[\"\"] and df[\"\"]==\"2010\"]\n",
-    "#aug=df.iloc[:,:4]\n",
     "\n",
     "df[[\"YEAR\",\"Actual Rainfall: JUN\",\"Actual Rainfall: JUL\",\"Actual Rainfall: AUG\"]]\n",
     "#df[df[\"dry\"] and df[\"YEAR\"]==\"2010\"]"
