--- a/labinternal.py.ipynb
+++ b/labinternal.py.ipynb
@@ -1100,8 +1100,7 @@
    ],
    "source": [
     "import pandas as pd\n",
-    "df=pd.read_csv('/home/msois/Downloads/Rainfall/southern.csv')\n",
-    "df"
+    "df=pd.read_csv('/home/msois/Downloads/Rainfall/southern.csv')\n"
    ]
   },
   {
